refactor: убрано предложение использовать уже существующий ключ